Corrected images being too large.

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .fixBorder {
 	border: 10px solid black;
-	height: 250px;
+	height: 275px;
 	margin:25px;
 }
 .mainSection {
@@ -55,10 +55,6 @@ body {
 .slightlyBigger {
 	font-size: 18px;
 }
-.yourTurn {
-	border:10px solid yellow;
-	box-shadow: 12px 12px;
-}
 #disconnectOne {
 	text-align: center;
 }
@@ -70,4 +66,21 @@ body {
 }
 .hide {
 	visibility: hidden;
+}
+#middleBox {
+	overflow: hidden;
+}
+#leftBox {
+	overflow: hidden;
+}
+#rightBox {
+	overflow: hidden;
+}
+.one {
+	width:35%;
+	height:35%;
+}
+.two {
+	width:35%;
+	height:35%;
 }
